feat: EIP-1155 Subgraph

--- a/subgraphs/blocks/subgraph.yaml
+++ b/subgraphs/blocks/subgraph.yaml
@@ -19,6 +19,6 @@ dataSources:
         - Block
       abis:
         - name: DepositContract
-          file: ./abis/DepositContract.json
+          file: ./abis/EIP1155.json
       blockHandlers:
         - handler: handleBlock
