chore: Adjusted package.json

--- a/subgraphs/exchange/package.json
+++ b/subgraphs/exchange/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "looksrare-exchange",
-  "description": "LooksRare Exchange subgraph",
+  "name": "exchange",
+  "description": "LooksRare exchange subgraph",
   "version": "1.0.0",
   "repository": "git@github.com:looksrare/subgraphs.git",
   "author": "LooksRare",
