--- a/subgraphs/exchange/subgraph.yaml
+++ b/subgraphs/exchange/subgraph.yaml
@@ -8,8 +8,9 @@ dataSources:
     name: LooksRareExchange
     network: rinkeby
     source:
+      address: "0x1AA777972073Ff66DCFDeD85749bDD555C0665dA"
       abi: LooksRareExchange
-      startBlock: 9999999999999 # TODO
+      startBlock: 9777344 # TO BE UPDATED FOR MAINNET
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
