chore: Updated package.json

--- a/subgraphs/fee-sharing/package.json
+++ b/subgraphs/fee-sharing/package.json
@@ -1,8 +1,8 @@
 {
   "name": "fee-sharing",
-  "description": "LooksRare FeeSharingSystem",
+  "description": "LooksRare LOOKS distribution system",
   "version": "1.0.0",
-  "repository": "git@github.com:looksrare/rare-subgraph.git",
+  "repository": "git@github.com:looksrare/subgraph.git",
   "author": "LooksRare",
   "license": "GPL-3.0-or-later",
   "scripts": {
