--- a/subgraphs/looks-distribution/package.json
+++ b/subgraphs/looks-distribution/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fee-sharing",
+  "name": "looks-distribution",
   "description": "LooksRare LOOKS distribution system",
   "version": "1.0.0",
   "repository": "git@github.com:looksrare/subgraph.git",
