--- a/subgraphs/airdrop/subgraph.yaml
+++ b/subgraphs/airdrop/subgraph.yaml
@@ -23,6 +23,8 @@ dataSources:
           file: ./abis/WyvernExchange.json
         - name: ERC20
           file: ./abis/ERC20.json
+        - name: IUniswapV2Pair
+          file: ./abis/IUniswapV2Pair.json
       callHandlers:
         - function: atomicMatch_(address[14],uint256[18],uint8[8],bytes,bytes,bytes,bytes,bytes,bytes,uint8[2],bytes32[5])
           handler: handleAtomicMatch
