--- a/subgraphs/airdrop/subgraph.yaml
+++ b/subgraphs/airdrop/subgraph.yaml
@@ -8,9 +8,9 @@ dataSources:
     name: WyvernExchange
     network: mainnet
     source:
-      address: '0x7Be8076f4EA4A4AD08075C2508e481d6C946D12b'
+      address: "0x7Be8076f4EA4A4AD08075C2508e481d6C946D12b"
       abi: WyvernExchange
-      startBlock: 5774644
+      startBlock: 12642194
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
