--- a/subgraphs/airdrop/subgraph.yaml
+++ b/subgraphs/airdrop/subgraph.yaml
@@ -8,9 +8,9 @@ dataSources:
     name: WyvernExchange
     network: mainnet
     source:
-      address: '0x7Be8076f4EA4A4AD08075C2508e481d6C946D12b'
+      address: "0x7Be8076f4EA4A4AD08075C2508e481d6C946D12b"
       abi: WyvernExchange
-      startBlock: 5774644
+      startBlock: 12642194
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -23,6 +23,8 @@ dataSources:
           file: ./abis/WyvernExchange.json
         - name: ERC20
           file: ./abis/ERC20.json
+        - name: IUniswapV2Pair
+          file: ./abis/IUniswapV2Pair.json
       callHandlers:
         - function: atomicMatch_(address[14],uint256[18],uint8[8],bytes,bytes,bytes,bytes,bytes,bytes,uint8[2],bytes32[5])
           handler: handleAtomicMatch
