--- a/subgraphs/exchange/subgraph.yaml
+++ b/subgraphs/exchange/subgraph.yaml
@@ -1,5 +1,5 @@
 specVersion: 0.0.4
-description: LooksRare exchange subgraph
+description: Volumes & royalties of users, creators, and collections.
 repository: https://github.com/looksrare
 schema:
   file: ./schema.graphql
@@ -8,9 +8,9 @@ dataSources:
     name: LooksRareExchange
     network: rinkeby
     source:
-      address: "0x1AA777972073Ff66DCFDeD85749bDD555C0665dA"
+      address: "0x59728544b08ab483533076417fbbb2fd0b17ce3a"
       abi: LooksRareExchange
-      startBlock: 9777344 # TO BE UPDATED FOR MAINNET
+      startBlock: 13885625
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
