--- a/subgraphs/rebate-campaign-v1/subgraph.yaml
+++ b/subgraphs/rebate-campaign-v1/subgraph.yaml
@@ -9,7 +9,7 @@ dataSources:
     network: mainnet
     source:
       abi: EIP721
-      startBlock: 4300082
+      startBlock: 0 # TODO
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
