fix: Fixed error

--- a/subgraphs/rebate-campaign-v1/subgraph.yaml
+++ b/subgraphs/rebate-campaign-v1/subgraph.yaml
@@ -16,6 +16,8 @@ dataSources:
       language: wasm/assemblyscript
       file: ./mappings/index.ts
       entities:
+        - Stats
+        - Collection
         - User
       abis:
         - name: EIP721
