--- a/subgraphs/rebate-campaign-v1/subgraph.yaml
+++ b/subgraphs/rebate-campaign-v1/subgraph.yaml
@@ -16,7 +16,9 @@ dataSources:
       language: wasm/assemblyscript
       file: ./mappings/index.ts
       entities:
+        - Collection
         - User
+        - Overview
       abis:
         - name: EIP721
           file: ./abis/EIP721.json
