--- a/subgraphs/looks-distribution/subgraph.yaml
+++ b/subgraphs/looks-distribution/subgraph.yaml
@@ -95,3 +95,28 @@ dataSources:
       eventHandlers:
         - event: RewardsClaim(indexed address,indexed uint256,uint256)
           handler: handleTradingRewardsClaim
+  - kind: ethereum/contract
+    name: AggregatorFeeSharingWithUniswapV3
+    network: mainnet
+    source:
+      address: "0x0000000000000000000000000000000000000000"
+      abi: AggregatorFeeSharingWithUniswapV3
+      startBlock: 9999999999
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      file: ./mappings/index.ts
+      entities:
+        - PurchaseLOOKSTokens
+        - User
+      abis:
+        - name: AggregatorFeeSharingWithUniswapV3
+          file: ./abis/AggregatorFeeSharingWithUniswapV3.json
+      eventHandlers:
+        - event: Deposit(indexed address,uint256)
+          handler: handleDepositAggregatorUniswapV3
+        - event: ConversionToLOOKS(uint256,uint256)
+          handler: handleConversionToLOOKSAggregatorUniswapV3
+        - event: Withdraw(indexed address,uint256)
+          handler: handleWithdrawAggregatorUniswapV3
