--- a/subgraphs/looks-distribution/subgraph.yaml
+++ b/subgraphs/looks-distribution/subgraph.yaml
@@ -17,6 +17,7 @@ dataSources:
       language: wasm/assemblyscript
       file: ./mappings/index.ts
       entities:
+        - DailySnapshot
         - RewardPeriod
         - User
       abis:
@@ -108,6 +109,7 @@ dataSources:
       language: wasm/assemblyscript
       file: ./mappings/index.ts
       entities:
+        - DailySnapshot
         - PurchaseLOOKSTokens
         - User
       abis:
