feat: Added Overview entity to keep cache

--- a/subgraphs/looks-distribution/subgraph.yaml
+++ b/subgraphs/looks-distribution/subgraph.yaml
@@ -18,6 +18,7 @@ dataSources:
       file: ./mappings/index.ts
       entities:
         - DailySnapshot
+        - Overview
         - RewardPeriod
         - User
       abis:
@@ -110,6 +111,7 @@ dataSources:
       file: ./mappings/index.ts
       entities:
         - DailySnapshot
+        - Overview
         - PurchaseLOOKSTokens
         - User
       abis:
