--- a/subgraphs/looks-distribution/package.json
+++ b/subgraphs/looks-distribution/package.json
@@ -10,7 +10,7 @@
     "codegen:mainnet": "graph codegen subgraph-mainnet.yaml",
     "build:rinkeby": "graph build subgraph-rinkeby.yaml",
     "build:mainnet": "graph build subgraph-mainnet.yaml",
-    "deploy:rinkeby": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ 0xjurassicpunk/looks-distribution subgraph-rinkeby.yaml",
-    "deploy:mainnet": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ looksrare/looks-distribution subgraph-mainnet.yaml"
+    "deploy:rinkeby": "cp ./mappings/utils/addresses-rinkeby.ts ./mappings/utils/addresses.ts && graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ 0xjurassicpunk/looks-distribution subgraph-rinkeby.yaml",
+    "deploy:mainnet": "cp ./mappings/utils/addresses-mainnet.ts ./mappings/utils/addresses.ts && graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ looksrare/looks-distribution subgraph-mainnet.yaml"
   }
 }
