feat: Added support for daily snapshots (#40)
* chore: Updated manifest/schema

* chore: Added helper to fetch shares for contracts

* feat: Added status to track active users

* feat: Added daily snapshots

* fix: Fixed issues

* feat: Added Overview entity to keep cache

* fix: Removed empty field

* fix: Fixed error

* feat: Added helper for fetching total amount staked

* refactor: Refactored for addresses

* refactor: Splitted updateDailyData with deposit/withdraw

* fix: Adjusted for double counting

* chore: Adjusted ABI

* fix: Fixed logic to avoid RPC call prior to deployment

* fix: Fixed for errors

* fix: Fixed error logic

* fix: Fixed logic error

* fix: Additional fixes

* fix: Various fixes

* fix: Fixed ABI issue

* chore: Adjusted config for rinkeby/mainnet

* chore: Added support for rinkeby/mainnet

* fix: Adjusted deposit/withdraw functions with correct updates

* refactor: Refactored with BN operators

* refactor: String to Address in config

* style: Removed empty space

--- a/subgraphs/looks-distribution/subgraph-mainnet.yaml
+++ b/subgraphs/looks-distribution/subgraph-mainnet.yaml
@@ -17,9 +17,13 @@ dataSources:
       language: wasm/assemblyscript
       file: ./mappings/index.ts
       entities:
+        - DailySnapshot
+        - Overview
         - RewardPeriod
         - User
       abis:
+        - name: AggregatorFeeSharingWithUniswapV3
+          file: ./abis/AggregatorFeeSharingWithUniswapV3.json
         - name: FeeSharingSystem
           file: ./abis/FeeSharingSystem.json
       eventHandlers:
@@ -108,11 +112,15 @@ dataSources:
       language: wasm/assemblyscript
       file: ./mappings/index.ts
       entities:
+        - DailySnapshot
+        - Overview
         - PurchaseLOOKSTokens
         - User
       abis:
         - name: AggregatorFeeSharingWithUniswapV3
           file: ./abis/AggregatorFeeSharingWithUniswapV3.json
+        - name: FeeSharingSystem
+          file: ./abis/FeeSharingSystem.json
       eventHandlers:
         - event: Deposit(indexed address,uint256)
           handler: handleDepositAggregatorUniswapV3
