--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@commitlint/config-conventional": "^15.0.0",
     "@graphprotocol/graph-cli": "^0.25.0",
     "@graphprotocol/graph-ts": "^0.24.0",
+    "@looksrare/sdk": "^0.3.0",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "eslint": "^8.5.0",
