--- a/subgraphs/looks-distribution/subgraph-rinkeby.yaml
+++ b/subgraphs/looks-distribution/subgraph-rinkeby.yaml
@@ -114,7 +114,7 @@ dataSources:
       entities:
         - DailySnapshot
         - Overview
-        - PurchaseLOOKSTokens
+        - AggregatorConversion
         - User
       abis:
         - name: AggregatorFeeSharingWithUniswapV3
