--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Run codegen
-        run: yarn codegen
+        run: yarn codegen:mainnet
 
       - name: Run build
-        run: yarn build
+        run: yarn build:mainnet
