fix(build): Rinkeby network

--- a/subgraphs/eip1155/subgraph-rinkeby.yaml
+++ b/subgraphs/eip1155/subgraph-rinkeby.yaml
@@ -6,7 +6,7 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: EIP1155
-    network: mainnet
+    network: rinkeby
     source:
       abi: EIP1155
       startBlock: 2474901
