--- a/subgraphs/eip721/subgraph-rinkeby.yaml
+++ b/subgraphs/eip721/subgraph-rinkeby.yaml
@@ -6,7 +6,7 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: EIP721
-    network: mainnet
+    network: rinkeby
     source:
       abi: EIP721
       startBlock: 935104
