--- a/subgraphs/blocks/subgraph-mainnet.yaml
+++ b/subgraphs/blocks/subgraph-mainnet.yaml
@@ -8,7 +8,7 @@ dataSources:
     name: DepositContract
     network: mainnet
     source:
-      address: '0x00000000219ab540356cBB839Cbe05303d7705Fa'
+      address: "0x00000000219ab540356cBB839Cbe05303d7705Fa"
       abi: DepositContract
     mapping:
       kind: ethereum/events
