--- a/subgraphs/exchange/package.json
+++ b/subgraphs/exchange/package.json
@@ -11,6 +11,7 @@
     "build:rinkeby": "graph build subgraph-rinkeby.yaml",
     "build:mainnet": "graph build subgraph.yaml",
     "deploy:rinkeby": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ 0xjurassicpunk/exchange subgraph-rinkeby.yaml",
-    "deploy:mainnet": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ looksrare/exchange subgraph.yaml"
+    "deploy:mainnet": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ looksrare/exchange subgraph.yaml",
+    "test": "graph test"
   }
 }
