--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "lerna": "^4.0.0",
     "prettier": "^2.6.0",
     "typescript": "^4.4.0"
+  },
+  "dependencies": {
+    "@looksrare/sdk": "^0.5.0"
   }
 }
