--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:rinkeby": "lerna run build:rinkeby",
     "build:mainnet": "lerna run build:mainnet",
     "format:check": "prettier --check '*/**/*.{js,ts,yaml,json}'",
-    "format:write": "prettier --write '*/**/*.{js,ts}'",
+    "format:write": "prettier --write '*/**/*.{js,ts,yaml,json}'",
     "lint": "eslint '*/**/*.{js,ts}'",
     "prepare": "husky install"
   },
