--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "codegen:mainnet": "lerna run codegen:mainnet",
     "build:rinkeby": "lerna run build:rinkeby",
     "build:mainnet": "lerna run build:mainnet",
-    "format:check": "prettier --check '*/**/*.{js,ts}'",
-    "format:write": "prettier --write '*/**/*.{js,ts}'",
+    "format:check": "prettier --check '*/**/*.{js,ts,yaml,json}'",
+    "format:write": "prettier --write '*/**/*.{js,ts,yaml,json}'",
     "lint": "eslint '*/**/*.{js,ts}'",
     "prepare": "husky install"
   },
@@ -30,6 +30,7 @@
     "eslint-config-prettier": "^8.5.0",
     "husky": "^7.0.0",
     "lerna": "^4.0.0",
+    "matchstick-as": "^0.4.2",
     "prettier": "^2.6.0",
     "typescript": "^4.4.0"
   },
