--- a/subgraphs/exchange/package.json
+++ b/subgraphs/exchange/package.json
@@ -7,10 +7,11 @@
   "license": "GPL-3.0-or-later",
   "scripts": {
     "codegen:rinkeby": "graph codegen subgraph-rinkeby.yaml",
-    "codegen:mainnet": "graph codegen subgraph-mainnet.yaml",
+    "codegen:mainnet": "graph codegen subgraph.yaml",
     "build:rinkeby": "graph build subgraph-rinkeby.yaml",
-    "build:mainnet": "graph build subgraph-mainnet.yaml",
+    "build:mainnet": "graph build subgraph.yaml",
     "deploy:rinkeby": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ 0xjurassicpunk/exchange subgraph-rinkeby.yaml",
-    "deploy:mainnet": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ looksrare/exchange subgraph-mainnet.yaml"
+    "deploy:mainnet": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ looksrare/exchange subgraph.yaml",
+    "test": "graph test"
   }
 }
