--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Install PostgreSQL
+        run: apt install postgresql
+
       - name: Checkout code
         uses: actions/checkout@v3
 
