build: Tests lerna command and workflows  (#60)
* chore: Added .yml to prettier

* build: Added test workflows and lerna command

* fix: Fixed name of job

* build: Added postgreSQL

* build: Adjusted build

* build: Adjusted for codegen/build

* build: Removed build.yml

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Tests
 
 on:
   workflow_dispatch:
@@ -8,11 +8,13 @@ on:
       - master
 
 jobs:
-  build:
-
-    name: Build
+  format:
+    name: Matchstick
     runs-on: ubuntu-latest
-
+    container: node:latest
+    services:
+      postgres:
+        image: postgres:latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -42,3 +44,6 @@ jobs:
 
       - name: Run build
         run: yarn build:mainnet
+
+      - name: Run tests
+        run: yarn test
