--- a/subgraphs/exchange/package.json
+++ b/subgraphs/exchange/package.json
@@ -12,6 +12,6 @@
     "build:mainnet": "graph build subgraph.yaml",
     "deploy:rinkeby": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ 0xjurassicpunk/exchange subgraph-rinkeby.yaml",
     "deploy:mainnet": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ looksrare/exchange subgraph.yaml",
-    "test": "graph codegen subgraph.yaml && graph build subgraph.yaml && graph test"
+    "test": "graph test -r"
   }
 }
