--- a/subgraphs/looks-distribution/package.json
+++ b/subgraphs/looks-distribution/package.json
@@ -12,6 +12,6 @@
     "build:mainnet": "graph build subgraph.yaml",
     "deploy:rinkeby": "cp ./mappings/utils/addresses-rinkeby.ts ./mappings/utils/addresses.ts && graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ 0xjurassicpunk/looks-distribution subgraph-rinkeby.yaml",
     "deploy:mainnet": "cp ./mappings/utils/addresses-mainnet.ts ./mappings/utils/addresses.ts && graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ looksrare/looks-distribution subgraph.yaml",
-    "test": "graph codegen subgraph.yaml && graph build subgraph.yaml && graph test"
+    "test": "graph test -r"
   }
 }
