--- a/subgraphs/royalty-fee-registry/package.json
+++ b/subgraphs/royalty-fee-registry/package.json
@@ -9,6 +9,6 @@
     "codegen:mainnet": "graph codegen subgraph.yaml",
     "build:mainnet": "graph build subgraph.yaml",
     "deploy:mainnet": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ looksrare/royalty-fee-registry subgraph.yaml",
-    "test": "graph codegen subgraph.yaml && graph build subgraph.yaml && graph test"
+    "test": "graph test -r"
   }
 }
