test: LOOKS distribution (#64)
* chore: Test config

* test: Adjustment helpers for TWO_BI, THREE_BI

* test: TradingRewardsDistributor unit test

* test: Updates

* build: Adjusted yarn test

* test: Added tests for FeeSharing

* build: Updates workflows

* fix: Renamed job name

* refactor: Split helper files

* build: Updates build

* test: LOOKS distribution

* refactor: Adjusted import paths

* build: Test lerna

* test: Add create event functions

* test: Aggregator deposit/withdraw tests

* fix: Test error

* test: New create helpers

* test: Tests for RewardPeriod/AggregatorConversion

* build: Name build update

* refactor: Adjusted with const/let

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: Matchstick
 
 on:
   workflow_dispatch:
@@ -9,7 +9,7 @@ on:
 
 jobs:
   format:
-    name: Matchstick
+    name: Graph
     runs-on: ubuntu-latest
     container: node:latest
     services:
