--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "format:check": "prettier --check '*/**/*.{js,ts,yaml,yml,json}'",
     "format:write": "prettier --write '*/**/*.{js,ts,yaml,yml,json}'",
     "lint": "eslint '*/**/*.{js,ts}'",
-    "test": "lerna run test",
+    "test": "lerna run test:lerna",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -26,7 +26,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.0.0",
     "@commitlint/config-conventional": "^16.0.0",
-    "@graphprotocol/graph-cli": "^0.28.0",
+    "@graphprotocol/graph-cli": "^0.29.0",
     "@graphprotocol/graph-ts": "^0.26.0",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
