--- a/subgraphs/exchange/package.json
+++ b/subgraphs/exchange/package.json
@@ -10,8 +10,9 @@
     "codegen:mainnet": "graph codegen subgraph.yaml",
     "build:rinkeby": "graph build subgraph-rinkeby.yaml",
     "build:mainnet": "graph build subgraph.yaml",
-    "deploy:rinkeby": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ 0xjurassicpunk/exchange subgraph-rinkeby.yaml",
-    "deploy:mainnet": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ looksrare/exchange subgraph.yaml",
+    "deploy:rinkeby": "graph codegen subgraph.yaml && graph build subgraph.yaml && graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ 0xjurassicpunk/exchange subgraph-rinkeby.yaml",
+    "deploy:mainnet": "graph codegen subgraph.yaml && graph build subgraph.yaml && graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ looksrare/exchange subgraph.yaml",
+    "deploy:studio": "graph codegen subgraph.yaml && graph build subgraph.yaml && graph deploy --studio looksrare-exchange-v1",
     "test": "graph test -r",
     "test:lerna": "graph codegen subgraph.yaml && graph build subgraph.yaml && graph test -r"
   }
