chore: Deployment instruction for studio

--- a/subgraphs/royalty-fee-registry/package.json
+++ b/subgraphs/royalty-fee-registry/package.json
@@ -9,6 +9,7 @@
     "codegen:mainnet": "graph codegen subgraph.yaml",
     "build:mainnet": "graph build subgraph.yaml",
     "deploy:mainnet": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ looksrare/royalty-fee-registry subgraph.yaml",
+    "deploy:studio": "graph codegen subgraph.yaml && graph build subgraph.yaml && graph deploy --studio looksrare-royalty-fee-registry",
     "test": "graph test -r",
     "test:lerna": "graph codegen subgraph.yaml && graph build subgraph.yaml && graph test -r"
   }
