--- a/subgraphs/exchange/package.json
+++ b/subgraphs/exchange/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "repository": "git@github.com:looksrare/subgraphs.git",
   "author": "LooksRare",
-  "license": "GPL-3.0-or-later",
+  "license": "MIT",
   "scripts": {
     "codegen:rinkeby": "graph codegen subgraph-rinkeby.yaml",
     "codegen:mainnet": "graph codegen subgraph.yaml",
