--- a/subgraphs/royalty-fee-registry/package.json
+++ b/subgraphs/royalty-fee-registry/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "repository": "git@github.com:looksrare/subgraph.git",
   "author": "LooksRare",
-  "license": "GPL-3.0-or-later",
+  "license": "MIT",
   "scripts": {
     "codegen:mainnet": "graph codegen subgraph.yaml",
     "build:mainnet": "graph build subgraph.yaml",
