--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
   tests:
     name: Matchstick
     runs-on: ubuntu-latest
-    container: node:16
+    container: node:latest
 
     services:
       postgres:
