--- a/subgraphs/eip1155/package.json
+++ b/subgraphs/eip1155/package.json
@@ -6,11 +6,10 @@
   "author": "LooksRare",
   "license": "MIT",
   "scripts": {
-    "codegen:rinkeby": "graph codegen subgraph-rinkeby.yaml",
-    "codegen:mainnet": "graph codegen subgraph-mainnet.yaml",
-    "build:rinkeby": "graph build subgraph-rinkeby.yaml",
-    "build:mainnet": "graph build subgraph-mainnet.yaml",
-    "deploy:rinkeby": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ 0xjurassicpunk/eip1155 subgraph-rinkeby.yaml",
-    "deploy:mainnet": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ looksrare/eip1155 subgraph-mainnet.yaml"
+    "codegen": "graph codegen subgraph.yaml",
+    "build:goerli": "graph build subgraph.yaml --network goerli",
+    "build:mainnet": "graph build subgraph.yaml --network mainnet",
+    "deploy:goerli": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ 0xjurassicpunk/eip1155 subgraph.yaml --network goerli",
+    "deploy:mainnet": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ looksrare/eip1155 subgraph.yaml --network mainnet"
   }
 }
