--- a/subgraphs/eip1155/subgraph.yaml
+++ b/subgraphs/eip1155/subgraph.yaml
@@ -6,10 +6,10 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: EIP1155
-    network: rinkeby
+    network: mainnet
     source:
       abi: EIP1155
-      startBlock: 2474901
+      startBlock: 5801844
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -25,9 +25,11 @@ dataSources:
         - name: EIP1155
           file: ./abis/EIP1155.json
       eventHandlers:
-        - event: TransferBatch(indexed address,indexed address,indexed address,uint256[],uint256[])
+        - event: TransferBatch(indexed address,indexed address,indexed
+            address,uint256[],uint256[])
           handler: handleTransferBatch
-        - event: TransferSingle(indexed address,indexed address,indexed address,uint256,uint256)
+        - event: TransferSingle(indexed address,indexed address,indexed
+            address,uint256,uint256)
           handler: handleTransferSingle
         - event: URI(string,indexed uint256)
           handler: handleURI
