--- a/subgraphs/exchange/package.json
+++ b/subgraphs/exchange/package.json
@@ -6,13 +6,12 @@
   "author": "LooksRare",
   "license": "MIT",
   "scripts": {
-    "codegen:rinkeby": "graph codegen subgraph-rinkeby.yaml",
-    "codegen:mainnet": "graph codegen subgraph.yaml",
-    "build:rinkeby": "graph build subgraph-rinkeby.yaml",
-    "build:mainnet": "graph build subgraph.yaml",
-    "deploy:rinkeby": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ 0xjurassicpunk/exchange subgraph-rinkeby.yaml",
-    "deploy:mainnet": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ looksrare/exchange subgraph.yaml",
-    "deploy:studio": "graph codegen subgraph.yaml && graph build subgraph.yaml && graph deploy --studio looksrare-exchange-v1",
+    "codegen": "graph codegen",
+    "build:goerli": "graph build subgraph.yaml --network goerli",
+    "build:mainnet": "graph build subgraph.yaml --network mainnet",
+    "deploy:goerli": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ 0xjurassicpunk/exchange subgraph.yaml --network goerli",
+    "deploy:mainnet": "graph deploy --product hosted-service --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ looksrare/exchange subgraph.yaml --network mainnet",
+    "deploy:studio": "graph codegen subgraph.yaml && graph build subgraph.yaml && graph deploy --studio looksrare-exchange-v1 --network mainnet",
     "test": "graph test -r",
     "test:lerna": "graph codegen subgraph.yaml && graph build subgraph.yaml && graph test -r"
   }
