--- a/subgraphs/exchange/subgraph.yaml
+++ b/subgraphs/exchange/subgraph.yaml
@@ -8,8 +8,8 @@ dataSources:
     name: LooksRareExchange
     network: mainnet
     source:
-      address: "0x59728544b08ab483533076417fbbb2fd0b17ce3a"
       abi: LooksRareExchange
+      address: "0x59728544b08ab483533076417fbbb2fd0b17ce3a"
       startBlock: 13885625
     mapping:
       kind: ethereum/events
@@ -32,9 +32,12 @@ dataSources:
         - name: IExecutionStrategy
           file: ../../node_modules/@looksrare/sdk/dist/abis/IExecutionStrategy.json
       eventHandlers:
-        - event: RoyaltyPayment(indexed address,indexed uint256,indexed address,address,uint256)
+        - event: RoyaltyPayment(indexed address,indexed uint256,indexed
+            address,address,uint256)
           handler: handleRoyaltyPayment
-        - event: TakerAsk(bytes32,uint256,indexed address,indexed address,indexed address,address,address,uint256,uint256,uint256)
+        - event: TakerAsk(bytes32,uint256,indexed address,indexed address,indexed
+            address,address,address,uint256,uint256,uint256)
           handler: handleTakerAsk
-        - event: TakerBid(bytes32,uint256,indexed address,indexed address,indexed address,address,address,uint256,uint256,uint256)
+        - event: TakerBid(bytes32,uint256,indexed address,indexed address,indexed
+            address,address,address,uint256,uint256,uint256)
           handler: handleTakerBid
