--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,7 +50,7 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Run codegen
-        run: yarn codegen:mainnet
+        run: yarn codegen
 
       - name: Run build
         run: yarn build:mainnet
