--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,6 @@
 {
   "npmClient": "yarn",
-  "packages": [
-    "subgraphs/**/*"
-  ],
+  "packages": ["subgraphs/**/*"],
   "useWorkspaces": true,
   "version": "independent"
 }
