--- a/subgraphs/aggregator/subgraph.yaml
+++ b/subgraphs/aggregator/subgraph.yaml
@@ -18,11 +18,12 @@ dataSources:
         - name: Seaport
           file: ./abis/Seaport.json
       eventHandlers:
-        - event: OrderFulfilled(bytes32,indexed address,indexed address,address,(uint8,address,uint256,uint256)[],(uint8,address,uint256,uint256,address)[])
+        - event: OrderFulfilled(bytes32,indexed address,indexed
+            address,address,(uint8,address,uint256,uint256)[],(uint8,address,uint256,uint256,address)[])
           handler: handleOrderFulfilled
       file: ./src/Seaport/index.ts
   - kind: ethereum
-    name: LooksRareExchange
+    name: LooksRareV1
     network: mainnet
     source:
       address: "0x59728544B08AB483533076417FbBB2fD0B17CE3a"
@@ -37,6 +38,7 @@ dataSources:
         - name: LooksRareExchange
           file: ./abis/LooksRareExchange.json
       eventHandlers:
-        - event: TakerBid(bytes32,uint256,indexed address,indexed address,indexed address,address,address,uint256,uint256,uint256)
+        - event: TakerBid(bytes32,uint256,indexed address,indexed address,indexed
+            address,address,address,uint256,uint256,uint256)
           handler: handleTakerBid
       file: ./src/LooksRareV1/index.ts
